# Modelado_Practica3

./: README.md  modelado_grabacionPantalla.webm
ros2bag2_alltopics/: metadata.yaml  rosbag2_2025_07_04-12_49_58_0.db3
rosbag2_cmd_vel/: metadata.yaml  rosbag2_2025_07_04-11_56_08_0.db3
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: robot_bridge.yaml  robot_controllers.yaml
src/robot_description/launch/: robot_controllers.launch.py  robot_gazebo.launch.py  robot_state_publisher.launch.py
src/robot_description/meshes/dae/: Torus.001.dae  Torus.002.dae  Torus.003.dae  Torus.004.dae  Torus.005.dae  Torus.dae
src/robot_description/robots/: robot.urdf.xacro
src/robot_description/rviz/: robot.rviz
src/robot_description/urdf/: ros2_control.urdf.xacro
src/robot_description/urdf/arm/: arm.urdf.xacro
src/robot_description/urdf/base/: robot_base.urdf.xacro
src/robot_description/urdf/sensors/: camera.urdf.xacro  gripper_camera.xacro  imu_sensor.urdf.xacro
src/robot_description/urdf/wheels/: wheels.urdf.xacro
src/rover_description_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rover_description_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  rover_description.ros2_control.xacro  rover_description.srdf  rover_description.urdf.xacro
src/rover_description_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  (+1 more)
