<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>Práctica_3</description>
  <maintainer email="mt.ortega.2021@alumnos.urjc.es">María Teresa Ortega</maintainer>
  <license>LICENSE</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>twist_stamper</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mix</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>